--- a/national-forest-explorer-frontend/src/features/posts/posts.css
+++ b/national-forest-explorer-frontend/src/features/posts/posts.css
@@ -38,6 +38,7 @@ a:hover {
     color: gold;
     font-size: 1.5em;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .post-review-text {
